<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL_VariableHMI" Id="{b9a94705-a932-4492-af2c-d0486e584051}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fbComponentHMI_1		: FB_Component_HMI;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>