<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_BaseTest" Id="{7ad8b220-f045-480c-8f86-96620e4491f8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_BaseTest EXTENDS TcUnit.FB_TestSuite
VAR
	fbTest				: FB_Base;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
T01_VariableBindingTest ();
]]></ST>
    </Implementation>
    <Method Name="T01_VariableBindingTest" Id="{015d9e92-fd3d-4e93-8815-35c0328a710d}">
      <Declaration><![CDATA[METHOD PRIVATE T01_VariableBindingTest
VAR_INPUT
END_VAR

VAR
	bWynik: BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF (TcUnit.TEST_ORDERED ('T01_VariableBindingTest')) THEN
	GVL.stCommonData.itfTime				:= GVL.fbMyTime;
	GVL.stCommonData.itfLocaciotn			:= GVL.fbMyLocation;
	GVL.stCommonData.itfLogger				:= GVL.fbLogger;
	
	bWynik		:= GVL_Variable.fbBasetest.LinkData (stCommonData	:= GVL.stCommonData);
	
	AssertTrue (Condition := bWynik, Message := 'T01 - test utworezenia referencji');
	
	TcUnit.TEST_FINISHED ();
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>